--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         .main-text{
             width: 500px;
-            margin: 0 auto 50px;
+            margin: 60px auto 50px;
         }
 
         .main-text h1{
@@ -258,7 +258,6 @@
 
         <div class="main-content">
             <div class="main-text">
-                <h1><strong>Hi</strong></h1>
                 <span><strong>Enter your unique code.</strong></span><br>
                 <span>Use the unique code from our official Telegram message.</span>
             </div>
